# practice_c

./: .gitignore  CMakeLists.txt  Readme.md
src/Array_Processing_and_Output_Management/: Makefile  alloc_char_arr.c  alloc_char_arr.h  alloc_desc.c  alloc_desc.h  alloc_int_arr.c  alloc_int_arr.h  description.h  description.txt  free_char_array.c  free_char_array.h  free_description.c  free_description.h  free_int_array.h  int_array.h  main.c  print_char_arr.c  print_char_arr.h  print_desc_name.c  print_desc_name.h  print_desc_value.c  print_desc_value.h  print_description.h  print_int_arr.c  set_char_array.c  write_to_file.h
src/Calculating_the_arithmetic_means/: calculating_the_arithmetic_means.c
src/Double_array_struct/: Makefile  alloc_array_container.c  alloc_array_container.h  container.h  free_struct.c  free_struct.h  main.c  print_struct.c  print_struct.h  set_val_array.c  set_val_array.h
src/Game_board/: game_board.c
src/Game_field/: game_field.c
src/Lifo/: Makefile  create_node.c  create_node.h  geometric_progression.c  geometric_progression.h  main.c  pop.c  pop.h  print_node.c  print_node.h  push.c  push.h  stack.h  top.c  top.h
src/Structure_Processing_and_Output_Management/: Makefile  alloc_desc.c  alloc_desc.h  char_array.h  free_int_array.c  print_description.c  print_int_arr.h  set_char_array.c  set_char_array.h  set_int_array.c  set_int_array.h  write_to_file.c
